Added Weintorte and Lebkuchen

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     </ul>
     <ol>
         <li>Alles miteinander verkneten</li>
-        <li>Teig <sup>1</sup>/<sub>2</sub>h rasten lassen</li>
+        <li>Teig <sup>1</sup>/<sub>2</sub> h rasten lassen</li>
         <li>Auswalken</li>
         <li>In Quadrate schneiden</li>
         <li>1 Teelöffel Marmelade auf jedes Quadrat geben</li>
@@ -242,6 +242,66 @@
         <li>Bei 200°C 10-20 min backen</li>
     </ol>
 </div>
-    
+
+<!-- Weintorte -->
+<div class="rezept">
+    <h2>Weintorte</h2>
+    Durchmesser: 24 cm
+    <ul>
+        <li>20 dag Butter</li>
+        <li>20 dag Zucker</li>
+        <li>1 Esslöffel Vanillezucker</li>
+        <li>3 Eier</li>
+        <li>1 ungespritzte Zitrone</li>
+        <li><sup>1</sup>/<sub>5</sub> l Weißwein</li>
+        <li>3 Esslöffel Baccardi</li>
+        <li>30 dag Mehl</li>
+        <li>5 dag Maizena</li>
+        <li>3 gestrichene Teelöffel Backpulver</li>
+    </ul>
+    <ol>
+        <li>Butter, Zucker, Vanillezucker schaumig rühren</li>
+        <li>Eier, Zitronensaft dazu</li>
+        <li>Mehl, Maizena, Backpulver gemeinsam mit Baccardi + Hälfte des Weins zu Teig mischen</li>
+        <li>Form: bebuttern + mit Brösel bestreuen</li>
+        <li>Bei 180°C ca. 45 min backen</li>
+        <li>Noch heiß mehrmals mit Glasur bestreichen und restlichen Wein darübergießen</li>
+    </ol>
+    <h3>Glasur</h3>
+    <ul>
+        <li>15 dag Staubzucker</li>
+        <li>3 Esslöffel Zitronensaft</li>
+    </ul>
+</div>
+
+<!-- Lebkuchen -->
+<div class="rezept">
+    <h2>Lebkuchen</h2>
+    <ul>
+        <li>50 dag Rohzucker</li>
+        <li>56 dag Roggenmehl</li>
+        <li>10 dag warmer Honig</li>
+        <li>4 Eier</li>
+        <li>2 <sup>1</sup>/<sub>2</sub> Teelöffel Natron</li>
+        <li>Ca. <sup>3</sup>/<sub>4</sub> Packerl Lebkuchengewürz</li>
+    </ul>
+    <ol>
+        <li>Alles vermischen, gut verkneten</li>
+        <li>Rasten lassen</li>
+        <li>Auf einem bemehlten Brett auswalken</li>
+        <li>Lebkuchen ausstechen oder für ein Lebkuchenhaus alle Wände etc. ausschneiden</li>
+        <li>Bei 210-230°C 5-8 min backen</li>
+    </ol>
+    <ul>
+        <li>Anmerkungen:
+            <ul>
+                <li>Um den Honig zu erhitzen stelle ein Gefäß mit Honig in ein größeres Gefäß mit erhitztem Wasser.</li>
+                <li>Wenn der Lebkuchen glänzen soll muss man ihn vor dem Backen mit Eiklar bestreichen.</li>
+                <li>Um ein Lebkuchenhaus zusammenzukleben eignet sich Marzipan weit besser als Zuckerglasur.</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+
 </body>
 </html>
