--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <!-- Weintorte -->
 <div class="rezept">
     <h2>Weintorte</h2>
-    Durchmesser: 24 cm
+    Durchmesser: 24 cm<br>
     <ul>
         <li>20 dag Butter</li>
         <li>20 dag Zucker</li>
