--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <!-- Weintorte -->
 <div class="rezept">
     <h2>Weintorte</h2>
-    Durchmesser: 24 cm<br>
+    <h5>Durchmesser: 24 cm</h5><br>
     <ul>
         <li>20 dag Butter</li>
         <li>20 dag Zucker</li>
@@ -301,6 +301,210 @@
             </ul>
         </li>
     </ul>
+</div>
+
+<!-- Blechlebkuchen -->
+<div class="rezept">
+    <h2>Blechlebkuchen</h2>
+    <ul>
+        <li>8 dag Butter</li>
+        <li>20 dag Rohzucker</li>
+        <li>4 Esslöffel Honig</li>
+        <li>2 Eier (Eiklar zu Schnee schlagen)</li>
+        <li>1 Packerl Lebkuchengewürz</li>
+        <li><sup>1</sup>/<sub>2</sub> kg Mehl (Weizen oder Roggen)</li>
+        <li>2 Teelöffel Natron</li>
+        <li><sup>1</sup>/<sub>4</sub> l Kaffee</li>
+    </ul>
+    <ol>
+        <li>Flüssige Zutaten vermischen</li>
+        <li>Zucker, dann Mehl + Schnee unterheben</li>
+        <li>Lebkuchengewürz, Mehl und Natron versieben und hinzugeben</li>
+        <li>Auf Backblech bei 180°C 20 min backen</li>
+        <li>In kleine Würfel schneiden</li>
+    </ol>
+    <h3>Anderes Rezept</h3>
+    <ul>
+        <li>20 dag Zucker</li>
+        <li>10 dag Öl</li>
+        <li>4 Eier</li>
+        <li><sup>1</sup>/<sub>4</sub> kg Mehl</li>
+        <li>10 dag Wasser</li>
+        <li><sup>1</sup>/<sub>2</sub> Packerl Backpulver</li>
+    </ul>
+    <ol>
+        <li>Zu Teig verarbeiten</li>
+        <li><sup>1</sup>/<sub>2</sub> Stunde bei 180°C backen</li>
+    </ol>
+</div>
+
+<!-- Rumkugeln -->
+<div class="rezept">
+    <h2>Rumkugeln</h2>
+    <ul>
+        <li>15 dag Schokolade</li>
+        <li>15 dag Nüsse</li>
+        <li>15 dag Zucker</li>
+        <li>1 kleines Ei oder 15 dag Butter</li>
+        <li>Rum (je nach Bedarf, ~6 Esslöffel)</li>
+    </ul>
+    <ol>
+        <li>Alles miteinander vermischen</li>
+        <li>Kugeln formen</li>
+        <li>In Zucker oder Schokostreusel wälzen</li>
+    </ol>
+</div>
+
+<!-- Anisbogerl -->
+<div class="rezept">
+    <h2>Anisbogerl</h2>
+
+    <ul>
+        <li>20 dag Zucker (wenn möglich Staubzucker)</li>
+        <li>20 dag Mehl</li>
+        <li>3 Eier</li>
+        <li>1 Packerl Vanillezucker</li>
+        <li><sup>1</sup>/<sub>2</sub> Packerl Backpulver</li>
+    </ul>
+
+    <ol>
+        <li>Eier + Zucker mit Mixer schaumig schlagen</li>
+        <li>Mehl und Backpulver dazugeben</li>
+        <li>Kleine Portionen auf Backblech setzen und mit Anis bestreuen</li>
+        <li>Bei 200°C ca. 10 min backen</li>
+        <li>Sofort biegen und in Eierbechern oder Schnapsstamperln auskühlen lassen</li>
+    </ol>
+</div>
+
+<!-- Weihnachtskekse -->
+<div class="rezept">
+    <h2>Weihnachtskekse</h2>
+
+    <ul>
+        <li>90 dag Mehl</li>
+        <li>50 dag Butter</li>
+        <li>40 dag Staubzucker</li>
+        <li>2 Packerl Vanillezucker</li>
+        <li>1<sup>1</sup>/<sub>2</sub> Packerl Backpulver</li>
+        <li>4 Eidotter</li>
+        <li>2 Eiklar</li>
+    </ul>
+
+    <ol>
+        <li>Butter zerschneiden, Mehl hinzugeben, abbröseln</li>
+        <li>Staubzucker, Vanillezucker und Backpulver über dem Teig versieben</li>
+        <li>Die Eier hinzufügen und das ganze Gemisch gut verkneten</li>
+        <li><sup>1</sup>/<sub>2</sub> Stunde rasten lassen</li>
+        <li>Wenn nötig etwas Milch hinzufügen</li>
+        <li>Ein Brett bemehlen und den Teig darauf auswalken</li>
+        <li>Kekse ausstechen und auf ein Blech geben</li>
+        <li>Bei 180°C 6-8 Minuten backen</li>
+    </ol>
+</div>
+
+<!-- Vanillekipferl -->
+<div class="rezept">
+    <h2>Vanillekipferl</h2>
+
+    <ul>
+        <li>26 dag Mehl</li>
+        <li>21 dag Butter</li>
+        <li>10 dag Zucker (wenn möglich Staubzucker)</li>
+        <li>10 dag Mandeln (geschält und gerieben)</li>
+    </ul>
+
+    <ol>
+        <li>Alles zu einem Mürbteig zusammenmischen, eventuell 1 Esslöffel Milch hinzufügen (wenn der Teig zu trocken ist)</li>
+        <li>Kalt rasten lassen</li>
+        <li>Zu einer Rolle formen</li>
+        <li>Scheiben schneiden</li>
+        <li>Vanillekipferl formen</li>
+        <li>Bei 180°C ca. 10 min backen</li>
+        <li>Noch heiß in Staubzucker + Vanillezucker wälzen (Vorsicht: Sehr zerbrechlich)</li>
+    </ol>
+</div>
+
+<!-- Haferflockenkekse -->
+<div class="rezept">
+    <h2>Haferflockenkekse</h2>
+
+    <ul>
+        <li>20 dag Butter</li>
+        <li>15 dag Zucker</li>
+        <li>20 dag Haferflocken oder -mark</li>
+        <li>2 dag Mehl</li>
+        <li>1 Ei</li>
+        <li><sup>1</sup>/<sub>2</sub> Teelöffel Backpulver</li>
+        <li>1 Packerl Vanillezucker</li>
+    </ul>
+
+    <ol>
+        <li>Alles vermischen</li>
+        <li>Kleine Häufchen auf ein Backblech setzen</li>
+        <li>Bei 180°C ca. 10 min backen</li>
+    </ol>
+</div>
+
+<!-- Marzipan -->
+<div class="rezept">
+    <h2>Marzipan</h2>
+
+    <ul>
+        <li>20 dag Mandeln</li>
+        <li>17 dag Staubzucker</li>
+        <li>1 Eiklar + Bittermandelöl</li>
+    </ul>
+</div>
+
+<!-- Strudelteig -->
+<div class="rezept">
+    <h2>Strudelteig</h2>
+
+    <ul>
+        <li><sup>1</sup>/<sub>2</sub> kg Mehl (glatt)</li>
+        <li><sup>1</sup>/<sub>2</sub> Teelöffel Salz</li>
+        <li>1 Esslöffel Essig</li>
+        <li>1 Ei (ganz)</li>
+        <li>ca. <sup>1</sup>/<sub>8</sub> l lauwarmes Wasser</li>
+    </ul>
+
+    <ol>
+        <li>Zusammenkneten</li>
+        <li>Teig mit Öl bestreichen</li>
+        <li><sup>1</sup>/<sub>2</sub> h rasten lassen</li>
+        <li>Möglichst dünn auswalken und ausziehen</li>
+        <li>Bei 180°C ca. <sup>1</sup>/<sub>2</sub> h backen</li>
+    </ol>
+</div>
+
+<!-- Obstkuchen -->
+<div class="rezept">
+    <h2>Obstkuchen</h2>
+
+    <p>Pro Blech:</p>
+    <ul>
+        <li>12 dag Butter</li>
+        <li>8 dag Wasser</li>
+        <li>4 Eidotter</li>
+        <li>20 dag Zucker</li>
+        <li><sup>3</sup>/<sub>4</sub> – 1 Packerl Backpulver</li>
+        <li>30 dag Mehl</li>
+        <li>4 Eiklar</li>
+    </ul>
+
+    <ol>
+        <li>Geschmolzene Butter, Wasser, Dotter, Zucker und Backpulver zusammenmischen</li>
+        <li>Eiklar zu Schnee schlagen</li>
+        <li>Mehl und Schnee abwechselnd unterziehen</li>
+        <li>Den fertigen Teig gleichmäßig auf ein Blech streichen, mit Früchten (Marillen, Kirschen, Rhabarber, Ribisel, …) belegen und bei 180°C für 25 min backen.</li>
+    </ol>
+    <ol>
+        <li>Anmerkungen:
+            <ol>
+                <li>Statt 12 dag Butter 8 dag Wasser kann man auch 20 dag Butter verwenden, aber es ändert nicht den Geschmack und ist mit weniger Butter und mehr Wasser gesünder.</li>
+            </ol>
+            </li>
+    </ol>
 </div>
 
 </body>
