--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <li>Bei 210-230°C 5-8 min backen</li>
     </ol>
     <ul>
-        <li>Anmerkungen:
+        <li><strong>Anmerkungen:</strong>
             <ul>
                 <li>Um den Honig zu erhitzen stelle ein Gefäß mit Honig in ein größeres Gefäß mit erhitztem Wasser.</li>
                 <li>Wenn der Lebkuchen glänzen soll muss man ihn vor dem Backen mit Eiklar bestreichen.</li>
@@ -498,13 +498,13 @@
         <li>Mehl und Schnee abwechselnd unterziehen</li>
         <li>Den fertigen Teig gleichmäßig auf ein Blech streichen, mit Früchten (Marillen, Kirschen, Rhabarber, Ribisel, …) belegen und bei 180°C für 25 min backen.</li>
     </ol>
-    <ol>
-        <li>Anmerkungen:
-            <ol>
+    <ul>
+        <li><strong>Anmerkungen:</strong>
+            <ul>
                 <li>Statt 12 dag Butter 8 dag Wasser kann man auch 20 dag Butter verwenden, aber es ändert nicht den Geschmack und ist mit weniger Butter und mehr Wasser gesünder.</li>
-            </ol>
-            </li>
-    </ol>
+            </ul>
+        </li>
+    </ul>
 </div>
 
 </body>
