--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
 <!-- Weintorte -->
 <div class="rezept">
     <h2>Weintorte</h2>
-    <h5>Durchmesser: 24 cm</h5><br>
+
+    <p>Durchmesser: 24 cm<p>
     <ul>
         <li>20 dag Butter</li>
         <li>20 dag Zucker</li>
@@ -259,6 +260,7 @@
         <li>5 dag Maizena</li>
         <li>3 gestrichene Teelöffel Backpulver</li>
     </ul>
+
     <ol>
         <li>Butter, Zucker, Vanillezucker schaumig rühren</li>
         <li>Eier, Zitronensaft dazu</li>
@@ -267,7 +269,9 @@
         <li>Bei 180°C ca. 45 min backen</li>
         <li>Noch heiß mehrmals mit Glasur bestreichen und restlichen Wein darübergießen</li>
     </ol>
+
     <h3>Glasur</h3>
+    
     <ul>
         <li>15 dag Staubzucker</li>
         <li>3 Esslöffel Zitronensaft</li>
